--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,13 @@
+form {
+  margin: 10px;
+  width: 300px
+}
+
 .flashs {
   display: flex;
   flex-wrap: wrap;
+}
+
+.clear-btn {
+  margin-left: 10px;
 }
